# quarto4sbp

./: AGENTS.md  CLAUDE.md  DESIGN.md  GEMINI.md  LICENSE.md  PROGRESS_SUMMARY.md  README.md  install.py  pyproject.toml
.beads/: issues.jsonl
.github/: copilot-instructions.md
.github/workflows/: ci.yml  main-ci.yml  pr-ci.yml
docs/: llm-testing-guide.md
docs/spec/: 000-shared-patterns.md  001-spec-based-development.md  002-q4s-cli-tool.md  004-install-script.md  007-word-support.md  008-unified-new-command.md  009-llm-integration.md
quarto4sbp/: __init__.py  cli.py
quarto4sbp/commands/: __init__.py  help.py  llm.py  new.py  new_docx.py  new_pptx.py  pdf_docx.py  pdf_pptx.py  tov.py
quarto4sbp/llm/: client.py  config.py
quarto4sbp/tov/: parser.py
quarto4sbp/utils/: __init__.py  config.py  pdf_export.py  scaffolding.py
templates/: combined-document.qmd  simple-document.qmd  simple-presentation.qmd
tests/: __init__.py  test_cli.py  test_install.py  test_llm_examples.py
tests/commands/: test_llm.py  test_new.py  test_new_docx.py  test_new_pptx.py  test_pdf.py  test_pdf_docx.py  test_pdf_pptx.py  test_pdf_pptx_integration.py  test_tov.py
tests/llm/: test_client.py  test_config.py  test_prompts.py
tests/mocks/: llm_client.py
tests/tov/: test_rewriter.py
tests/utils/: test_config.py
